--- a/public/css/sass/components/segment/segment.scss
+++ b/public/css/sass/components/segment/segment.scss
@@ -129,4 +129,7 @@ section{
     text-align: left;
     width: 32%;
     left: 105%;
+    display: flex;
+    flex-direction: column;
+
 }
